<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity">

    <TextView
        android:id="@+id/newAccountTitleView"
        android:layout_width="232dp"
        android:layout_height="52dp"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="156dp"
        android:text="@string/new_account_title"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:gravity="right"
        android:text="@string/name_label"
        android:textColor="@color/titleColor"
        android:textSize="24sp"
        android:typeface="normal"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountTypeLabel" />

    <TextView
        android:id="@+id/amountLabel"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:text="@string/amount_label"
        android:textColor="@color/titleColor"
        android:textSize="24sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="98dp"
        android:layout_height="54dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="25dp"
        android:text="@string/save_button"
        android:textColor="@color/titleColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_text"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/bill_amount"
        app:layout_constraintStart_toEndOf="@+id/amountLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toEndOf="@+id/accountTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/newAccountTitleView" />

    <TextView
        android:id="@+id/accountTypeLabel"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:gravity="right"
        android:text="@string/account_label"
        android:textColor="@color/titleColor"
        android:textSize="24sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAccountTitleView" />

</android.support.constraint.ConstraintLayout>